# RoboMasters

./: .gitignore  Manifold_Setup_Manual.md  README.md  main.c
RnD_log/Bobby/: color_boundary_detect.cpp  oneOrManyObjectDetectLZB.cpp  week1_to_3.md
RnD_log/user/: 1.8 TFT_display.h  BilateralCommunication.c  Dbus.h  Driver_Encoder.c  Driver_Encoder.h  GoOnStage.c  Lifting_Motor_Control.c  Lifting_Motor_Control.h  PID.c  Template.uvguix.BaiJiaxin  Template.uvguix.Cheung Ngai.xml  Template.uvguix.Ngai  Template.uvguix.Thomas  Template.uvprojx  adc.c  button.c  button.h  buzzer.c  buzzer.h  buzzer_song.c  can.h  canBusProcess.c  data_monitor.c  data_monitor.h  encoder.c  encoder.h  flash.h  general_control.c  gpio.h  judge.h  pneumatic.c  pneumatic.h  pwm.h  ticks.c  usart.c  yaw_gyro.c
UI/: README.md  config.js  package.json
UI/app/: index.ejs  package.json
base/code/: CMakeCache.txt  Makefile  base.cpp  cmake_install.cmake  test
base/code_modifying/: CMakeLists.txt  armorDetector.cpp  armorDetector.hpp  base.cpp  imageProcessor.cpp  imageProcessor.hpp  old.cpp  serial.cpp  serial.h  settings.cpp  settings.hpp
base/openSouceCode/: ArmorDetector.cpp  ArmorDetector.hpp  CMakeLists.txt  ImageConsProd.cpp  ImageConsProd.hpp  LedController.hpp  Predictor.cpp  Predictor.hpp  RemoteController.cpp  RemoteController.hpp  RuneDetector.cpp  RuneDetector.hpp  RuneResFilter.cpp  (+7 more)
debug_ui/: index.html  main.css  main.js  package.json  renderer.js
drone/catkin_ws/src/circle_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
drone/catkin_ws/src/circle_detector/src/: circle_detector.cpp
infantry/rune/: .getImgs.cpp.swp  .getLabel.cpp.swp  .main.cpp.swo  .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  LeNet-model  Makefile  ]  cmake_install.cmake  function_test  getImgs.cpp  getImgs.cpp~  getLabel.cpp  getLabel.cpp~  main.cpp  main.cpp~  rects.txt  test
infantry/rune/tiny_dnn/: tiny_dnn.h~
(+217 files in other folders)
